--- a/app/src/main/res/layout/music_queue_layout.xml
+++ b/app/src/main/res/layout/music_queue_layout.xml
@@ -55,6 +55,7 @@
         android:layout_weight="5"
         android:orientation="vertical">
         <ImageView
+            android:id="@+id/coverImage"
             android:layout_width="300dp"
             android:layout_height="300dp"
             android:layout_gravity="center_horizontal"
@@ -93,6 +94,7 @@
         </LinearLayout>
 
         <SeekBar
+            android:id="@+id/SeekBar"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:max="200"
@@ -116,7 +118,8 @@
             android:layout_gravity="center_horizontal"
             android:background="@color/black"
             android:layout_marginBottom="10dp"
-            android:foreground="@drawable/sharp_play_arrow_white_36">
+            android:scaleType="fitXY"
+            android:src="@drawable/sharp_play_arrow_white_36">
 
         </ImageButton>
 
