--- a/app/src/main/res/layout/music_queue_layout.xml
+++ b/app/src/main/res/layout/music_queue_layout.xml
@@ -68,26 +68,29 @@
             android:orientation="vertical">
             <TextView
                 android:id="@+id/first_lyrics"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:text="1111111111111"
+                android:text="."
                 android:gravity="center_horizontal"
+                android:layout_gravity="center_horizontal"
                 android:textColor="@color/white">
             </TextView>
             <TextView
                 android:id="@+id/second_lyrics"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:text="22222222222222"
+                android:text="."
                 android:gravity="center_horizontal"
+                android:layout_gravity="center_horizontal"
                 android:textColor="@color/white">
             </TextView>
             <TextView
                 android:id="@+id/third_lyrics"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:text="33333333333333"
+                android:text="."
                 android:gravity="center_horizontal"
+                android:layout_gravity="center_horizontal"
                 android:textColor="@color/white">
             </TextView>
 
