--- a/app/src/main/res/layout/music_queue_layout.xml
+++ b/app/src/main/res/layout/music_queue_layout.xml
@@ -16,38 +16,40 @@
         android:paddingBottom="20dp"
         >
         <TextView
-            android:id="@+id/singer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="30dp"
-            android:layout_gravity="center_horizontal"
-            android:text="singer">
-        </TextView>
-
-        <TextView
-            android:id="@+id/album"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_marginTop="10dp"
-            android:textSize="30dp"
-            android:layout_gravity="center_horizontal"
-            android:text="album">
-        </TextView>
-
-        <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:layout_marginTop="10dp"
-            android:textSize="30dp"
+            android:textSize="24dp"
             android:layout_gravity="center_horizontal"
-            android:text="title">
+            android:text="">
+        </TextView>
+
+        <TextView
+            android:id="@+id/singer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:layout_marginTop="10dp"
+            android:textSize="24dp"
+            android:layout_gravity="center_horizontal"
+            android:text="">
         </TextView>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/album"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="50dp"
+        android:textSize="20dp"
+        android:layout_gravity="right"
+        android:layout_marginBottom="20dp"
+        android:text="">
+    </TextView>
 
     <LinearLayout
         android:layout_width="match_parent"
